--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -26,7 +26,7 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 
 def domain_excludes = [
-
+    '**/domain/getrecipes/Recipe.class'
 ]
 buildCoverageCheck(
     ['src/main/java'],//sourcePaths:
