Adding Custom Application implementation
A custom application class is needed for using dagger as the location where we can define the application scope and ultimate root of our graph

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,7 +106,9 @@ def app_excludes = [
     //dependency injection
     '**/di/**',
     //services
-    '**/recipes/services/**'
+    '**/recipes/services/**',
+    '**/recipes/RecipesApp.class'
+
 ]
 
 buildCoverageCheck(
