Adding Recipe View Holders
Our Recipes will be displayed as part of a recycler view. Therefore we need a common view holder type. In this case because we are binding a common type it makes sense to use an abstract class to provide the common behaviour. Each implementation simply creates the databinding.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,10 @@ def app_excludes = [
     //services
     '**/recipes/services/**',
     '**/recipes/RecipesApp.class',
-    '**/recipes/presentation/views/**'
+    '**/recipes/presentation/views/**',
+    '**/recipes/presentation/recipes/recipeslist/**'
+
+
 
 ]
 
