Adding RecyclerView Dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
   implementation Libs.appCompatV7
   implementation Libs.constraintLayout
   implementation Libs.androidLifeCycleExtensions
+  implementation Libs.recyclerView
   implementation Libs.cardView
 
 
